# CommonLibraries

./: CMakeLists.txt  MakefileLibCommon
Common/: CMakeLists.txt  Makefile  SSLSocket.cpp  SSLSocket.h  SimpleSockets.cpp  cserial.c  platforms.h  timing.cpp
Common/Android/jni/: Android.mk  Application.mk
Irrlicht/include/: ISceneNodeAnimator.h  IrrCompileConfig.h  Keycodes.h
Irrlicht/source/Irrlicht/: CSceneNodeAnimatorCameraFPS.cpp  Makefile
Irrlicht/source/Irrlicht/Android/jni/: Android.mk
IrrlichtExtensions/: CMakeLists.txt  FileSystemItemOrganizer.cpp  IExtendableSkin.cpp  IExtendableSkin.h  JoyStickElement.cpp  JoyStickElement.h
IrrlichtExtensions/android/jni/: Android.mk  Application.mk
build-android/: CMakeCache.txt
